Made and styled pokemon list with dynamic data

--- a/pokemon-app/index.html
+++ b/pokemon-app/index.html
@@ -4,23 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Pokemon App</title>
 </head>
 
 <body>
-
-  <div class="pokemon-card">
-    <img src="" alt="" srcset="">
-    <h3 class="name">name</h3>
-    <label for="cars">Choose a type:</label>
-
-    <select name="type" id="type">
-      <option value="electric">Electric</option>
-      <option value="fire">Fire</option>
-    </select>
-    <button class="add-button">Add to team</button>
-  </div>
-
+  <h1>Pokemon List</h1>
 </body>
 <script src="index.js"></script>
 
