--- a/pokemon-app/index.html
+++ b/pokemon-app/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <h1>Pokemon List</h1>
+  <div class="description"></div>
 </body>
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
 
 </html>
