Able to add pokemon to your team

--- a/pokemon-app/index.html
+++ b/pokemon-app/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Pokemon List</h1>
+  <div class="result-message"></div>
   <div class="description"></div>
 </body>
 <script type="module" src="index.js"></script>
