--- a/pdf-app/index.html
+++ b/pdf-app/index.html
@@ -4,29 +4,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Month Dropdown with Form</title>
   <link rel="stylesheet" href="style.css">
-  <title>Pdf App</title>
 </head>
 
 <body>
 
-  <label for="months">Select a Month:</label>
-  <select id="months" name="months">
-    <option value="January">January</option>
-    <option value="February">February</option>
-    <option value="March">March</option>
-    <option value="April">April</option>
-    <option value="May">May</option>
-    <option value="June">June</option>
-    <option value="July">July</option>
-    <option value="August">August</option>
-    <option value="September">September</option>
-    <option value="October">October</option>
-    <option value="November">November</option>
-    <option value="December">December</option>
-  </select>
+  <form id="eventForm">
+    <label for="months">Select a Month:</label>
+    <select id="months" name="months" onchange="showForm()">
+      <option value="">Select a month</option>
+      <option value="January">January</option>
+      <option value="February">February</option>
+      <option value="March">March</option>
+      <option value="April">April</option>
+      <option value="May">May</option>
+      <option value="June">June</option>
+      <option value="July">July</option>
+      <option value="August">August</option>
+      <option value="September">September</option>
+      <option value="October">October</option>
+      <option value="November">November</option>
+      <option value="December">December</option>
+    </select>
 
+    <div id="dynamicForm">
+      <div class="form-group">
+        <label for="eventName">Event Name:</label>
+        <input type="text" id="eventName" name="eventName">
+      </div>
+      <div class="form-group">
+        <label for="eventDate">Event Date:</label>
+        <input type="date" id="eventDate" name="eventDate">
+      </div>
+    </div>
+
+    <button type="button" onclick="submitForm()">Submit</button>
+  </form>
+
+  <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 
 </html>
