--- a/pdf-app/index.html
+++ b/pdf-app/index.html
@@ -37,6 +37,7 @@
         <label for="eventDate">Event Date:</label>
         <input type="date" id="eventDate" name="eventDate">
       </div>
+      <!-- Add more form fields as needed -->
     </div>
 
     <button type="button" onclick="submitForm()">Submit</button>
