Added pdf function

--- a/pdf-app/index.html
+++ b/pdf-app/index.html
@@ -42,7 +42,7 @@
 
     <button type="button" onclick="submitForm()">Submit</button>
   </form>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="index.js"></script>
 </body>
 
