--- a/pdf-app/index.html
+++ b/pdf-app/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Month Dropdown with Form</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js" defer></script>
 </head>
 
 <body>
@@ -42,7 +43,6 @@
 
     <button type="button" onclick="submitForm()">Submit</button>
   </form>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="index.js"></script>
 </body>
 
