Seperated team description logic

--- a/pokemon-app/index.html
+++ b/pokemon-app/index.html
@@ -10,8 +10,11 @@
 
 <body>
   <h1>Pokemon List</h1>
-  <div class="result-message"></div>
-  <div class="description"></div>
+  <ul>
+    <li><a href="index.html">List</a></li>
+    <li><a href="./results/result.html">Team</a></li>
+  </ul>
+
 </body>
 <script type="module" src="index.js"></script>
 
