--- a/pokemon-app/index.html
+++ b/pokemon-app/index.html
@@ -14,6 +14,8 @@
     <li><a href="index.html">List</a></li>
     <li><a href="./results/result.html">Team</a></li>
   </ul>
+  <div class="result-message"></div>
+
 
 </body>
 <script type="module" src="index.js"></script>
