Created array of pokemon data

--- a/pokemon-app/results/result.html
+++ b/pokemon-app/results/result.html
@@ -14,6 +14,7 @@
   </ul>
   <div class="description" id="teamDescription"></div>
   <div class="result-message" id="resultMessage"></div>
+  <div class="pokemonCard"></div>
   <script src="results.js"></script>
 
 </html>
