--- a/netflix-clone/index.html
+++ b/netflix-clone/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
+    <link rel="stylesheet" href="./css//style.css">
+    <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 <body>
+    <header class="showcase">
+        <div class="showcase-top">
+            <img src="img/logo.png" alt="Netflix">
+            <a href="#" class="btn btn-rounded"></a>
+        </div>
+        <div class="showcase-content">
+            <h1>See what's next</h1>
+            <p>Watch anywhere. Cancel anytime</p>
+            <a href="#" class="btn btn-xl"></a>
+            Watch Free For 30 Days
+        </div>
+    </header>
     
 </body>
 <script src="./js/main.js"></script>
+<script src="https://kit.fontawesome.com/de53ac8db3.js" crossorigin="anonymous"></script>
 </html>
